# api/urls.py
@@ -1,10 +1,11 @@
 from django.urls import path
 from rest_framework_simplejwt.views import TokenRefreshView
-from .views import HelloView, RegisterView, CustomTokenObtainPairView
+from .views import HelloView, RegisterView, CustomTokenObtainPairView, ProfileMeView
 
 urlpatterns = [
     path("hello/", HelloView.as_view(), name="hello"),
     path("auth/register/", RegisterView.as_view(), name="auth-register"),
     path("auth/token/", CustomTokenObtainPairView.as_view(), name="token_obtain_pair"),
     path("auth/token/refresh/", TokenRefreshView.as_view(), name="token_refresh"),
+    path("profile/me/", ProfileMeView.as_view(), name="profile-me"),
 ]
